--- a/paper/main/library.bib
+++ b/paper/main/library.bib
@@ -959,3 +959,14 @@
    DOI = {10.1038/s41612-023-00454-8},
    year = {2023}
 }
+
+@software{Schwertfeger_2024,
+  author       = {Benjamin T. Schwertfeger},
+  title        = {btschwertfeger/python-cmethods: v2.3.0},
+  month        = Jun,
+  year         = 2024,
+  publisher    = {Zenodo},
+  version      = {v2.3.0},
+  doi          = {10.5281/zenodo.12168002},
+  url          = {https://doi.org/10.5281/zenodo.12168002}
+}
